# Tinyhttpd

./: CMakeLists.txt  Makefile  README.md  simpleclient.c
src/: httpd.c  main.c
tinyHttpClient/: CMakeLists.txt
tinyHttpClient/src/: tinyHttpClient.c
tinyHttpServer/: CMakeLists.txt
tinyHttpServer/src/: tinyHttpServer.c
