#cmake最低版本
CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
#项目名称
PROJECT(Tinyhttpd)
set(CMAKE_BUILD_TYPE Debug)
#使能c++11
SET(CMAKE_CXX_STANDARD 11)
# 设置编译目标名称
SET(LINK_TARGETNAME http)
# 设置链接库名称
SET(LINK_LIB_LIST pthread)
# 设置变量，表示所有的源文件
AUX_SOURCE_DIRECTORY(./src LINK_SOURCEFILES)

ADD_EXECUTABLE(${LINK_TARGETNAME}  ${LINK_SOURCEFILES})

# 依赖的库文件
TARGET_LINK_LIBRARIES(${LINK_TARGETNAME} ${LINK_LIB_LIST})

